@@ -1,3 +1,9 @@
+2005-09-28  Jan Beulich  <jbeulich@novell.com>
+
+	* gas/i386/reloc64.s: Also test .slong.
+	* gas/i386/reloc64.l: Adjust.
+	* gas/i386/reloc64.d: Adjust.
+
 2005-09-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/lns/lns.exp (lns-common-1): Don't run on targets without
